--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .App-logo {
@@ -35,4 +36,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+.row{
+  display:flex;
+}
+
+
+.col-1, .col-2{
+  margin-left:2%;
+}
+.col-1{
+  margin-left:32%;
 }
